--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -6,14 +6,14 @@
     <BODY>
         <H1>States</H1>
         <UL>
-        {% for item in html_list.values()| sort(attribute="name") %}
-            <LI>{{ item.id }}: <B>{{ item.name }}</B>
+        {% for state in html_list.values()|sort(attribute="name") %}
+            <LI>{{ state.id }}: <B>{{ state.name }}</B>
                 <UL>
-                {% for city in item.cities| sort(attribute="name") %}
+                {% for city in state.cities|sort(attribute="name") %}
                     <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
                 {% endfor %}
                 </UL>
-            </LI>    
+            </LI>
         {% endfor %}
         </UL>
     </BODY>
