:heavy_plus_sign: add item on lines 10 and 13

--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -7,10 +7,10 @@
         <H1>States</H1>
         <UL>
         {% for state in html_list.values()|sort(attribute="name") %}
-            <LI>{{ state.id }}: <B>{{ state.name }}</B>
+            <LI>{{ state.id }}: <B>{{ state.name }}</item></B>
                 <UL>
                 {% for city in state.cities|sort(attribute="name") %}
-                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                    <LI>{{ city.id }}: <B>{{ city.name }}</B></item></B></LI>
                 {% endfor %}
                 </UL>
             </LI>
